Added Permission Request for Android 6.0 and above

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="dialog_vibrateonly_caption">Vibrate Only</string>
     <string name="dialog_radius_caption">Radius</string>
     <string name="dialog_radius_hint">In Meters</string>
-    <string name="instructions">Use the add button (+) to create new alarm.\n\nAlarms with lower sort orders will be placed higher up the list. Tasks with the same sort order will be sorted alphabetically.\n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed). \n\nEach task has Edit and Delete buttons if you want to change the details or remove the task.</string>
+    <string name="instructions">Use the add button (+) to create new alarm.\n\nAlarms with lower sort orders will be placed higher up the list.. \n\nEach task can be disabled/enabled.</string>
     <string name="instruction_heading">Instructions</string>
     <string name="latloc">Lat <![CDATA[<font color=#FF0000>%1$f </font>Lng <font color=#FF0000>%2$f</font> ]]></string>
     <string name="radius">Radius %d m</string>
